[package]
name = "cookbook"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = "1"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
clap = "4.5.8"
ansi_term = "0.12.1"
flate2 = "1.0.30"
tar = "0.4.41"
image = "0.25.1"
num = "0.4.3"
threadpool = "1.8.1"
error-chain = "0.12.4"
num_cpus = "1.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
rayon = "1.10.0"
glob = "0.3.1"
ring = "0.17.8"
data-encoding = "2.6.0"
bitflags = "2.6.0"
rusqlite = "0.31.0"
postgres = "0.19.7"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.3"
syslog = "6.1.1"
log4rs = "1.3.0"
semver = "1.0.23"
url = "2.5.2"
percent-encoding = "2.3.1"
base64 = "0.22.1"
csv = "1.3.0"
serde = "1.0.203"
serde_json = "1.0.118"
toml = "0.8.14"
byteorder = "1.5.0"
same-file = "1.0.6"
memmap = "0.7.0"
walkdir = "2.5.0"
lazy_static = "1.5.0"
regex = "1.10.5"
ndarray = "0.15.6"
unicode-segmentation = "1.11.0"
reqwest = "0.12.5"
select = "0.6.0"
mime = "0.3.17"
hyper = "1.3.1"
# sqlx = { version = "0.7.4", features = [ "runtime-tokio" ] }
tokio = { version = "1.38.0", features = ["full"] }